fix navbar overflow & add styleengine wrapper

--- a/client/src/components/Navbar/Navbar.module.css
+++ b/client/src/components/Navbar/Navbar.module.css
@@ -1,7 +1,11 @@
 .root {
   height: 50px;
-  background-color: white;
   width: 100%;
+  background-color: #151515;
+}
+
+.bellIcon {
+  color: white;
 }
 
 *{
@@ -31,7 +35,6 @@
   width: 50px;
   height: 50px;
   cursor: pointer;
-
 }
 
 .menuicon{
@@ -58,3 +61,4 @@ nav ul li a{
   color: #ffffff
   font-size 15px;
 }
+
